# AI-Marketing-Video-Intelligent-Analysis-and-Tagging-System

./: .gitignore  MCP_Cursor_配置完整指南.md  MCP_QuickStart.md  README.md  UNIFIED_SYSTEM_ARCHITECTURE.md  _🥛 AI-启赋 ✨ - 🌟 素材-使用效果.csv  _🥛 AI-启赋 ✨ - 🍼 素材-产品介绍.csv  _🥛 AI-启赋 ✨ - 🎁 素材-促销机制.csv  _🥛 AI-启赋 ✨ - 🪝 素材-钩子.csv  analyze_unprocessed_files.py  auto_env.sh  batch_process_all_slices.sh  clean_orphaned_json_log_20250712_115944.txt  configure_cursor_mcp.sh  extraction_report.txt  has_json_dirs.txt  integrate_classification_results_improved.py  mark_failed_slices.py  mark_invalid_slices.py  move_perfect_log_20250712_114142.txt  move_slices_log_20250712_111618.txt  organize_perfect_log_20250712_121837.txt  pyproject.toml  restore_recycled_log_20250712_114831.txt  restore_recycled_log_20250712_114918.txt  setup_env.sh  test_file_filtering.py  一键DD.sh  一键DD使用说明.md  视频分类_一级主标签.sh  视频分类_二级副标签.sh  视频分类_文件生成.sh  视频切片.sh  视频切片_产品介绍.sh  视频标签.sh
.cursor/rules/: code-debugging-optimization.mdc  n8n-documentation-priority.mdc  uv-python-management.mdc
Script_Digest/: ARCHITECTURE.md  README.md  manual_move_from_pass.py  pyproject.toml  run.py  start.sh
Script_Digest/config/: dynamic_match_config.py  env_config.example.txt
Script_Digest/src/: deepseek_client.py  env_loader.py  file_organizer.py  json_analyzer.py  script_parser.py  video_matcher.py
feishu_pool/: __init__.py  optimized_data_pool.py  pyproject.toml  query_tables.py  unified_complete_sync_v2.py
label_to_classifier/: ARCHITECTURE_OPTIMIZATION.md  ARCHITECTURE_OPTIMIZATION_FINAL.md  OPTIMIZATION_ROADMAP.md  README.md  pyproject.toml  run.py
label_to_classifier/src/: base_ai_classifier.py  data_classes.py  json_processor.py  local_main_tag_classifier.py  primary_ai_classifier.py  secondary_ai_classifier.py  slice_file_manager.py  tag_system_manager.py  unified_ai_client.py  unified_ai_config_manager.py  unified_config_manager.py  unified_processing_manager.py
mcp_server/: MCP_README.md  pyproject.toml  server_official.py
slice_to_label/: CONFIGURATION_SUMMARY.md  DUAL_MECHANISM_GUIDE.md  README.md  batch_slice_to_label.py  batch_translate.py  manage_keywords.py  official_ai_analyzer.py  pyproject.toml  run_analysis.py  setup.sh  translate_json.py
slice_to_label/config/: keyword_extraction_config.py  prompt_templates.py  slice_config.py
slice_to_label/src/: ai_analyzers.py  env_loader.py  smart_frame_extractor.py
slice_to_label/utils/: __init__.py  file_utils.py
srt_to_product/: README.md  pyproject.toml  run.py
srt_to_product/config/: config_example.txt
srt_to_product/src/: batch_srt_to_product.py  deepseek_analyzer.py  env_loader.py  srt_parser.py  video_generator.py
video_to_MP4/: .gitignore  QUICKSTART.md  README.md  pyproject.toml  run.py  setup.sh
video_to_MP4/src/: __init__.py  batch_processor.py  config_manager.py  converter_config.py  utils.py  video_converter.py
video_to_slice/: download_models.py  pyproject.toml  run.py  start_cli.sh  video_cli.py
video_to_slice/src/: google_video_analyzer.py  parallel_batch_processor.py  parallel_video_slicer.py  semantic_segment_merger.py  video_slice_cli.py
video_to_srt/: demo_srt.py  pyproject.toml  run.py
video_to_srt/data/output/: temp_蕴淳-1024-二胎妈妈-选奶经验-品牌价值--大促引导8s-高端品牌15s-HMO9s-口碑4s-促销机制4s-素材1.srt  蕴淳_二胎妈妈_语义分割.srt  蕴淳_二胎妈妈_语义分割_clean.srt
video_to_srt/src/: batch_video_to_srt.py  dashscope_audio_analyzer.py  env_loader.py  word_level_semantic_splitter.py
📄SRT/0617_1/: 0617_1_full.srt
📄SRT/2025-05-29 131355/: 2025-05-29 131355_full.srt
📄SRT/2025-06-23 163205/: 2025-06-23 163205_full.srt
📄SRT/206_1744615248_raw/: 206_1744615248_raw_full.srt
📄SRT/297_1747302642_raw/: 297_1747302642_raw_full.srt
📄SRT/3-14启赋水奶定稿版/: 3-14启赋水奶定稿版_full.srt
📄SRT/3月13日-副本-副本/: 3月13日-副本-副本_full.srt
📄SRT/4.3蕴淳【定稿最终】/: 4.3蕴淳【定稿最终】_full.srt
📄SRT/463_1742830468/: 463_1742830468_full.srt
📄SRT/5-11启赋定稿/: 5-11启赋定稿_full.srt
📄SRT/5.13H25041153031-中荷夫妇EviA级-_抖音_-启赋奶粉/: 5.13H25041153031-中荷夫妇EviA级-_抖音_-启赋奶粉_full.srt
📄SRT/5.13启赋 3/: 5.13启赋 3_full.srt
📄SRT/5月13日(1)/: 5月13日(1)_full.srt
📄SRT/5月惠氏启赋 (1)/: 5月惠氏启赋 (1)_full.srt
📄SRT/6-14启赋定稿/: 6-14启赋定稿_full.srt
📄SRT/78a3ea5b22ce8095cdc157c39b8bac53_raw/: 78a3ea5b22ce8095cdc157c39b8bac53_raw_full.srt
📄SRT/H25040830038-1747296258000/: H25040830038-1747296258000_full.srt
📄SRT/IMG_0610/: IMG_0610_full.srt
📄SRT/IMG_2935/: IMG_2935_full.srt
📄SRT/IMG_3067/: IMG_3067_full.srt
📄SRT/IMG_5379/: IMG_5379_full.srt
📄SRT/IMG_5954/: IMG_5954_full.srt
📄SRT/IMG_6033/: IMG_6033_full.srt
📄SRT/IMG_6433/: IMG_6433_full.srt
📄SRT/IMG_8390/: IMG_8390_full.srt
📄SRT/IMG_8697/: IMG_8697_full.srt
📄SRT/IMG_9977/: IMG_9977_full.srt
📄SRT/c92f88fc00b46a023d82c4ad48979650_raw/: c92f88fc00b46a023d82c4ad48979650_raw_full.srt
📄SRT/八戒不是大头娃-启赋能恩（发布版）/: 八戒不是大头娃-启赋能恩（发布版）_full.srt
📄SRT/双鱼夫妇-发布版/: 双鱼夫妇-发布版_full.srt
📄SRT/发布/: 发布_full.srt
📄SRT/发布版/: 发布版_full.srt
📄SRT/发布版(1)/: 发布版(1)_full.srt
📄SRT/发布版(2)/: 发布版(2)_full.srt
📄SRT/发布版(3)/: 发布版(3)_full.srt
📄SRT/发布版(4)/: 发布版(4)_full.srt
📄SRT/发布版(5)/: 发布版(5)_full.srt
📄SRT/发布版(6)/: 发布版(6)_full.srt
📄SRT/启赋-发布版/: 启赋-发布版_full.srt
📄SRT/启赋1/: 启赋1_full.srt
📄SRT/启赋发布版1/: 启赋发布版1_full.srt
📄SRT/启赋抖音 周雨 2025-06-06 15.07.32/: 启赋抖音 周雨 2025-06-06 15.07.32_full.srt
📄SRT/启赋蓝罐定/: 启赋蓝罐定_full.srt
📄SRT/启赋蕴醇发布版/: 启赋蕴醇发布版_full.srt
📄SRT/奇异玛丽-惠氏启赋蕴淳/: 奇异玛丽-惠氏启赋蕴淳_full.srt
📄SRT/奶粉发布版/: 奶粉发布版_full.srt
📄SRT/小徐和君君——7.6启赋净版/: 小徐和君君——7.6启赋净版_full.srt
📄SRT/惠氏启赋/: 惠氏启赋_full.srt
📄SRT/成片-v2广告-运动营养师辣妈zz-启赋蕴淳_1/: 成片-v2广告-运动营养师辣妈zz-启赋蕴淳_1_full.srt
📄SRT/曹颖-启赋-发布版/: 曹颖-启赋-发布版_full.srt
📄SRT/曹颖-启赋-发布版(1)/: 曹颖-启赋-发布版(1)_full.srt
📄SRT/美颜版3/: 美颜版3_full.srt
📄SRT/营养师范范（亲子户外） 启赋奶粉-发布版/: 营养师范范（亲子户外） 启赋奶粉-发布版_full.srt
📄SRT/这是楠楠字幕/: 这是楠楠字幕_full.srt
📄SRT/雀巢唯唯-大版本05/: 雀巢唯唯-大版本05_full.srt
📄SRT/雀巢奶粉-锦鲤的十安宝宝/: 雀巢奶粉-锦鲤的十安宝宝_full.srt
📄SRT/高能一天/: 高能一天_full.srt
