[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.23.7",
    "google-genai>=1.24.0",
    "google-generativeai",
    "moviepy>=2.2.1",
    "numpy",
    "opencv-python>=4.11.0.86",
    "oss2>=2.19.1",
    "pillow>=11.3.0",
    "requests>=2.32.4",
]
