[project]
name = "script-digest"
version = "0.1.0"
description = "AI-powered script-to-video matching and organization system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pathlib",
    "typing",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "jieba>=0.42.1",
    "openai>=1.0.0",  # DeepSeek API 兼容
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "data/",
    "results/",
    "cache/",
    "temp/", 
    "logs/",
    "tests/",
    "*.txt",
    "__pycache__",
    "*.log",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[project.scripts]
script-digest = "run_script_digest:main" 