[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-pool"
version = "1.0.0"
description = "飞书数据池管理系统 - 管理视频、字幕、切片的智能数据池"
authors = [
    {name = "AI Video Master"}
]
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "lark-oapi>=1.4.19",
]
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
setup-feishu-pools = "feishu_pool.setup_feishu_pools:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
] 
