[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-slice"
version = "5.0.0"
description = "AI Video Master 5.0 - 智能视频切片系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Video AI Team", email = "team@video-ai.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    # 核心依赖
    "google-cloud-videointelligence>=2.11.0",
    "google-cloud-storage>=2.10.0",
    "tqdm>=4.65.0",
    "pathlib-mate>=1.2.0",
    # 语义分析新增依赖
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "pillow>=9.0.0",
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # 数据处理
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    # 其他工具
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gpu = [
    "torch[cuda]>=2.0.0",
]
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/your-org/video-to-slice"
Repository = "https://github.com/your-org/video-to-slice.git"
Documentation = "https://video-to-slice.readthedocs.io/"
"Bug Tracker" = "https://github.com/your-org/video-to-slice/issues"

[project.scripts]
video-slice = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
